@@ -275,7 +275,10 @@ public class CEditorPreferencePage extends AbstractPreferencePage implements IWo
 
 		fCTextTools = CUIPlugin.getDefault().getTextTools();
 		CSourceViewerConfiguration configuration = new CSourceViewerConfiguration(fCTextTools, null);
-		fPreviewViewer = new SourceViewer(parent, null, SWT.V_SCROLL | SWT.H_SCROLL);
+		//fPreviewViewer = new SourceViewer(parent, null, SWT.V_SCROLL | SWT.H_SCROLL);
+		PreviewSourceViewer asv = new PreviewSourceViewer(parent, SWT.V_SCROLL | SWT.H_SCROLL);
+		asv.setPreferenceStore(CUIPlugin.getDefault().getCombinedPreferenceStore());
+		fPreviewViewer = asv;
 		fPreviewViewer.configure(configuration);
 		fPreviewViewer.getTextWidget().setFont(JFaceResources.getFontRegistry().get(JFaceResources.TEXT_FONT));
 		fPreviewViewer.setEditable(false);
